--- a/responsivewebdesign/projects/tributepage.css
+++ b/responsivewebdesign/projects/tributepage.css
@@ -18,9 +18,12 @@ body {
   font-size: 15px;
 }
 #image {
-  max-width: auto; 
-  max-height: auto; 
-  object-fit: contain;
+  width: 100%;
+  height: auto;
+  max-width: 625px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 #tribute-info {
     font-size: 18px;
