--- a/responsivewebdesign/projects/product/product.css
+++ b/responsivewebdesign/projects/product/product.css
@@ -45,6 +45,7 @@ a {
   border-radius: 2px;
   background: transparent;
   cursor: pointer;
+  
 }
 
 .grid {
@@ -161,7 +162,7 @@ nav > ul {
 }
 
 #subscribe input[type="submit"]:hover {
-  background-color: #70716B;
+  background-color: gray;
   transition: background-color 1s;
 }
 
@@ -180,4 +181,88 @@ nav > ul {
 #the-process > iframe {
   max-width: 560px;
   width: 100%;
+}
+
+.icon {
+  padding: 10px;
+}
+
+#pricing {
+  margin-top: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.product {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: calc(100%  / 3);
+  margin: 10px;
+  border: 1px solid #000;
+  border-radius: 3px;
+  line-height: 1.8;
+  display: inline-block;
+  vertical-align: middle;
+  
+}
+
+.product > .level {
+  background-color: #C3C3C3;
+  color: black;
+  padding: 15px 0;
+  width: 100%;
+  height: 75px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.product > h2 {
+  margin-top: 15px;
+}
+
+.product > ol {
+  margin: 10px 0;
+  font-size: 18px;
+}
+
+.product > ol > li {
+  padding: 5px 0;
+}
+
+.product > button {
+  border: 0;
+  margin: 15px 0;
+  background-color: #70716B;
+  font-weight: 400;
+  
+}
+
+.product > button:hover {
+  background-color: gray;
+  transition: background-color 1s;
+}
+
+@media (max-width: 800px) {
+  #pricing {
+    flex-direction: column;
+  }
+  .product {
+    max-width: 300px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 10px;
+  }
+}
+
+#button1 {
+  position: relative;
+  top: 42px;
+ }
+
+#button2 {
+  position: relative;
+  top: 52px;
 }
